[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/RubikGlitch-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/menu/LevelSelectItem.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 50
font_data = ExtResource( 1 )

[node name="Item" type="Panel"]
margin_right = 1200.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainHBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MainHBox"]
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
custom_fonts/font = SubResource( 1 )
text = "10"

[node name="Label2" type="Label" parent="MainHBox"]
margin_left = 450.0
margin_right = 818.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Best Time:"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="MainHBox"]
margin_left = 868.0
margin_right = 1200.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "600"
align = 1
valign = 1

[connection signal="pressed" from="MainHBox/Button" to="." method="_on_Button_pressed"]
